Keeping Sonar happy