@@ -5,7 +5,6 @@ import java.util.Collections;
 import java.util.EnumSet;
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 import nl.ramsolutions.sw.magik.debugadapter.slap.ByteBufferHelper;
 import nl.ramsolutions.sw.magik.debugadapter.slap.ISlapResponse;
 import nl.ramsolutions.sw.magik.debugadapter.slap.RequestType;
@@ -188,9 +187,7 @@ public class StackFrameLocalsResponse implements ISlapResponse {
                     break;
                 }
 
-                case TYPE_BYTE:
-                case TYPE_SHORT:
-                case TYPE_INT: {
+                case TYPE_BYTE, TYPE_SHORT, TYPE_INT: {
                     int value = buffer.getInt(valueOffset);
                     valueStr = Integer.toString(value);
                     break;
@@ -243,7 +240,7 @@ public class StackFrameLocalsResponse implements ISlapResponse {
     public StackFrameLocalsResponse(final List<ISlapResponse> subResponses) {
         this.locals = subResponses.stream()
             .map(Local.class::cast)
-            .collect(Collectors.toList());
+            .toList();
     }
 
     public List<Local> getLocals() {
