@@ -5,7 +5,6 @@ import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 import nl.ramsolutions.sw.magik.MagikTypedFile;
 import nl.ramsolutions.sw.magik.analysis.Position;
 import nl.ramsolutions.sw.magik.analysis.helpers.MethodDefinitionNodeHelper;
@@ -51,7 +50,7 @@ public class InlayHintProvider {
         return topNode.getDescendants(MagikGrammar.METHOD_INVOCATION).stream()
             .map(node -> this.getMethodInvocationInlayHints(magikFile, node))
             .flatMap(List::stream)
-            .collect(Collectors.toList());
+            .toList();
     }
 
     private List<InlayHint> getMethodInvocationInlayHints(
@@ -83,12 +82,9 @@ public class InlayHintProvider {
         final List<AstNode> argumentNodes = argumentsNode.getDescendants(MagikGrammar.ARGUMENT);
         for (int i = 0; i < argumentNodes.size(); ++i) {
             final AstNode argumentNode = argumentNodes.get(i);
-            if (!this.isSimpleAtomArgument(argumentNode)) {
+            if (!this.isSimpleAtomArgument(argumentNode)
+                || i >= parameters.size()) {
                 continue;
-            }
-
-            if (i >= parameters.size()) {
-                break;
             }
 
             final Parameter parameter = parameters.get(i);
