@@ -8,7 +8,6 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
-import java.util.stream.Collectors;
 import javax.annotation.CheckForNull;
 import javax.annotation.Nullable;
 import nl.ramsolutions.sw.magik.analysis.typing.types.TypeString;
@@ -123,7 +122,7 @@ public final class TypeStringBuilderVisitor implements AstVisitor {
                 .map(AstNode::getFirstChild)
                 .map(this.mapping::get)
                 .map(Objects::requireNonNull)
-                .collect(Collectors.toList())
+                .toList()
             : Collections.emptyList();
         final TypeString[] genericsArr = generics.toArray(TypeString[]::new);
         final TypeString part = TypeString.ofIdentifier(str, this.currentPakkage, genericsArr);
@@ -143,7 +142,7 @@ public final class TypeStringBuilderVisitor implements AstVisitor {
         final List<TypeString> childTypeStrings = childAsts.stream()
             .map(this.mapping::get)
             .map(Objects::requireNonNull)
-            .collect(Collectors.toList());
+            .toList();
         if (childAsts.isEmpty()) {
             throw new IllegalStateException();
         }
