@@ -1,7 +1,6 @@
 package nl.ramsolutions.sw.magik.typedchecks;
 
 import java.util.List;
-import java.util.stream.Collectors;
 import nl.ramsolutions.sw.magik.checks.DisabledByDefault;
 import nl.ramsolutions.sw.magik.checks.TemplatedMagikCheck;
 import nl.ramsolutions.sw.magik.typedchecks.checks.GlobalKnownTypedCheck;
@@ -44,7 +43,7 @@ public final class CheckList {
     public static List<Class<?>> getDisabledByDefaultChecks() {
         return getChecks().stream()
             .filter(checkClass -> checkClass.getAnnotation(DisabledByDefault.class) != null)
-            .collect(Collectors.toList());
+            .toList();
     }
 
     /**
@@ -54,7 +53,7 @@ public final class CheckList {
     public static List<Class<?>> getTemplatedChecks() {
         return getChecks().stream()
             .filter(checkClass -> checkClass.getAnnotation(TemplatedMagikCheck.class) != null)
-            .collect(Collectors.toList());
+            .toList();
     }
 
 }
